syntax = "proto3";

package api.course.service.v1;

option go_package = "microservice/api/course/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.course.service.v1";

service Course {
  rpc ListCourse (ListCourseRequest) returns (ListCourseReply);
}

message ListCourseRequest {
}
message ListCourseReply {
  message Course {
    int64 ID = 1;
    string title = 2;
    string description = 3;
    int64 teacher_id = 4;
  }
  repeated Course courses = 1;
}